# threads-ai-agent

./: .gitignore  README.md  pyproject.toml
src/threads_ai_agent/: __init__.py  agent.py  cli.py  system_prompt.txt
